--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build && npm run build:content",
-    "build:content": "esbuild src/content.ts --bundle --outfile=dist/content.js --format=iife",
+    "build:content": "node esbuild.config.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -29,6 +29,8 @@
     "vaul": "^1.1.2"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@eslint/js": "^9.29.0",
     "@types/chrome": "^0.0.326",
     "@types/node": "^24.0.4",
